ADDING: video Group

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NODE_ENV=production
 BASE_URL=https://flashionary.ir
 PORT=3001
-ONE_API_TOKEN=654372:63e7d734577d4
+ONE_API_TOKEN=token
+JWT_SECRET=secretkey
+
