--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcrypt": "^5.1.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "fileupload": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.12.14",
+    "nodemon": "^3.1.4",
     "request": "^2.88.2",
     "shortid": "^2.2.16"
   },
