--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fileupload": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.12.14",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.4",
     "request": "^2.88.2",
     "shortid": "^2.2.16"
